# 3D-Renderer-For-Testing

./: .gitignore  CMakeLists.txt  Camera.hpp  Frustum.hpp  README.md  Renderer.hpp  main.cpp
GL_Utils/: Shader.hpp  Texture.hpp  Vertex.hpp  VertexArray.hpp
Shaders/: ShaderModes.hpp  frag3.glsl  fragment2.glsl  vert3.glsl  vertex2.glsl
Shapes/: CubeClass.hpp  Shape.hpp  ShapeController.hpp
